# file-operation

./: .gitignore  Cargo.toml  README.md  readme.md  time
sh/: init.sh
src/: lib.rs
src/copy/async/: fn.rs
src/copy/sync/: fn.rs
src/delete/: mod.rs
src/delete/async/: fn.rs
src/delete/sync/: fn.rs
src/file/: cfg.rs  copy.rs  delete.rs  impl.rs  mod.rs  move.rs  read.rs  struct.rs  type.rs  write.rs
src/file/copy/: async.rs  sync.rs
src/file/copy/async/: fn.rs
src/file/delete/: sync.rs
src/file/move/: async.rs  sync.rs
src/file/read/: async.rs  sync.rs
src/file/read/async/: fn.rs
src/file/write/: async.rs  sync.rs
src/move/async/: fn.rs
src/move/sync/: fn.rs
src/read/: mod.rs
src/read/async/: fn.rs
src/read/sync/: fn.rs
src/write/async/: fn.rs
src/write/sync/: fn.rs
tests/: mod.rs
tests/file/: fn.rs
