[package]
name = "file-operation"
version = "0.5.10"
edition = "2024"
authors = ["eastspire <root@ltpp.vip>"] 
license = "MIT"
description = """A Rust library providing a set of utilities for common file operations such as reading, writing, and querying file metadata like size. It aims to simplify file handling in Rust projects, offering safe and efficient file manipulation methods."""
keywords = ["time", "hyperlane", "day", "format", "lang"]
repository = "https://github.com/eastspire/file-operation.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
